# sanhua-system

./: .env.example  .gitignore  AGENTS.md  Modelfile  Modelfile.codex  README.md  add_swapfile.sh  aicore_check.py  audio_test.py  batch_update_entry_points.py  bench_llama_cuda.py  chatgpt_importer.py  check_syntax.py  cleanup_legacy.py  config.py  config.yaml  create_memory_module.py  default_config.yaml  dingtalk_install.sh  disable_auto_venv.sh  fix_ai_config.py  fix_all_issues.py  fix_and_run.sh  fix_cli_entry_path_and_dispatcher.py  fix_entry_import_paths.py  fix_errors.sh  fix_imports.py  fix_log_calls.py  fix_log_path.py  fix_logger_calls.py  fix_logger_extra.py  fix_logger_extra_parens.py  fix_package_exports.sh  fix_percent_format.py  fix_relative_imports.py  fix_systemmonitor.py  get_file_sizes  golden_cloud.py  health_report.md  init_packages.py  (+36 more)
config/: __init__.py  aliases.darwin.yaml  config.py  global_config.json  release_v2_whitelist.txt  user.yaml  user_config.yaml
core/aicore/sanhua-llama-manager/: README.md  pyproject.toml
core/aicore/sanhua-llama-manager/sanhua/: llama_controller.py
core/aicore/sanhua-llama-manager/scripts/: run_dev.sh
core/aicore/sanhua-llama-manager/server/: app.py
core/aicore/sanhua-llama-manager/systemd/: sanhua-model-manager.service
dependencies/: requirements.txt
docs/: AGENTS.md  ASSESSMENT_SCOPE_POLICY.md  COORDINATION_FLOW.md  NEXT_ACTION.md  REPO_ASSET_LAYERS.md  TECH_DEBT.md  V1_DIRECTION.md  chat_routing_governance.md
entry/: add_entry_func.py  register_and_run_entries.py
scaffold/: fix_all_imports.py  (+2 more)
(+408 files in other folders)
