[project]
name = "sanhua-llama-manager"
version = "0.1.0"
description = "Sanhua · llama.cpp 模型管理器（本地优先，惰性唤醒，空闲关停）"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
]

[tool.uvicorn]
factory = false
host = "127.0.0.1"
port = 9000
reload = false
